# llm_vul_analyzer

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/llm_vul_analyzer/: repo_getter.py  scan.py
src/llm_vul_analyzer/detectors/: filter.py  heuristics.py  llm_scoring.py
src/llm_vul_analyzer/git_utils/: repo_read.py
